# sync-schema-demo

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/models/: user.py
backend/app/routers/: users.py
frontend/: index.html  package.json  pnpm-lock.yaml  schema-format.hbs
frontend/src/: App.tsx
frontend/src/components/: UserForm.tsx  UserManager.tsx
frontend/src/lib/api/: client.ts
frontend/src/lib/api/schema/: api_schemas.ts
